[metadata]
name = grapefruit
version = 0.1a5
description = A module to manipulate color information easily.
long_description = file: README.rst

## sdist info
author = Xavier Basty
author_email = xbasty@gmail.com
url = https://github.com/xav/Grapefruit/
keywords = color, colour
classifiers =
  Programming Language :: Python
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Topic :: Software Development
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Multimedia :: Graphics

[options]
py_modules = grapefruit

[options.package_data]
grapefruit =
  *.rst
  doc/*

[nosetests]
verbosity = 3
with-doctest = 1
doctest-extension = rst
exe = 1
with-coverage = 1
cover-package = grapefruit
cover-min-percentage = 90
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
